--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flags Quiz</title>
+    <link rel="icon" href="/quiz.svg" type="image/svg+xml" />
+    <title>Country Quiz</title>
   </head>
   <body>
     <div id="root"></div>
